--- a/style/style.css
+++ b/style/style.css
@@ -90,7 +90,9 @@ html {
   top: 0;
   width: 100%;
   height: 75px;
-  background: #40a826a1;
+  background: #40a826;
+  
+  z-index: 10;
 }
 
 .navbar__wrap {
@@ -168,7 +170,7 @@ html {
     left: -100%;
     width: 100%;
     height: 100%;
-    background-color: #13C613;
+    background: #40a826;
     z-index: 100;
     display: flex;
     transition: 0.3s;
