--- a/style/swiper.css
+++ b/style/swiper.css
@@ -1,20 +1,23 @@
 .swiper {
 	width: 100%;
-	height: 300px;
+	height: 400px;
 	cursor: grab;
+	margin-bottom: 5px;
 }
 /* .swiper-wrapper {
-	width: 600px;
-	height: 300px;
- } */
-/* .swiper-slide {
-	width: 600px;
-	height: 300px;
- } */
+	
+	width: 100%;
+	height: 100%;
+ }
+.swiper-slide {
+	width: 100%;
+	height: 100%;
+} */
 .swiper-slide img {
 	width: 100%;
 	height: 100%;
 	object-fit: contain;
+	
 }
 .swiper-pagination {
 	color: aliceblue;
