--- a/style/akkordeon.css
+++ b/style/akkordeon.css
@@ -5,12 +5,34 @@
 	cursor: pointer;
 	margin-bottom: 10px;
 }
+.work-icon {
+	width: 50px;
+	height: 50px;
+	border: 1px solid rgb(160, 247, 122);;
+	margin-right: 5px;
+}
+.work-icon img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+.work-text {
+	display: flex;
+	align-items: center;
+	background-color: rgb(160, 247, 122);
+	padding: 5px;
+}
+.work-text p {
+	font-weight: 700;
+	font-size: 20px;
+}
 .work-diskription img {
 	width: 100px;
 }
 .work-diskription {
-	border: 2px solid red;
+	padding: 5px;
 	margin-bottom: 30px;
+	background-color: rgb(193, 251, 168);
 }
 .work-diskription-hidden {
 	display: none;
