--- a/style/swiper.css
+++ b/style/swiper.css
@@ -1,8 +1,20 @@
 .swiper {
-	width: 100%;
-	height: 400px;
+	width: 600px;
+	/* height: 300px; */
 	cursor: grab;
 	margin-bottom: 5px;
+}
+@media (max-width: 768px) {
+	.swiper {
+		width: 500px;
+		
+	}
+}
+@media (max-width: 520px) {
+	.swiper {
+		width: 320px;
+		
+	}
 }
 /* .swiper-wrapper {
 	
@@ -20,12 +32,12 @@
 	
 }
 .swiper-pagination {
-	color: aliceblue;
+	color: rgb(255, 255, 255);
 	font-weight: 700;
 }
 .swiper-button-prev::after {
-	color: rgb(157, 157, 157);
+	color: rgba(255, 255, 255, 0.8);
 }
 .swiper-button-next::after {
-	color: rgb(157, 157, 157);
+	color: rgba(255, 255, 255, 0.8);
 }
