--- a/style/akkordeon.css
+++ b/style/akkordeon.css
@@ -1,15 +1,26 @@
 .works {
-	border: 2px solid black;
+	background-color: var(--block-background);
+	margin-bottom: 10px;
 }
 .work {
 	cursor: pointer;
-	margin-bottom: 10px;
+	margin-bottom: var(margin-ten);
 }
 .work-icon {
-	width: 50px;
-	height: 50px;
-	border: 1px solid rgb(160, 247, 122);;
-	margin-right: 5px;
+	width: 60px;
+	height: 60px;
+	border: 1px solid rgb(198, 197, 197);
+	background-color: rgb(239, 239, 239);
+	margin-right: var(--margin-five);
+	margin-bottom: var(--margin-five);
+}
+.work-icon:last-child {
+	margin-bottom: 0px;
+}
+.work-icon:hover {
+	background-color: rgb(198, 197, 197);
+	transition: 0.3s;
+	box-shadow: var(--box-shadow);
 }
 .work-icon img {
 	width: 100%;
@@ -17,27 +28,60 @@
 	object-fit: cover;
 }
 .work-text {
-	display: flex;
-	align-items: center;
-	background-color: rgb(160, 247, 122);
-	padding: 5px;
+	/* display: flex; */
+	/* align-items: center; */
+	/* background-color: rgb(160, 247, 122); */
+	padding: var(--padding-ten);
+	background-color: rgb(193, 221, 180);
+	min-width: 60%;
+	text-align: center;
+}
+.work-text:hover {
+	background-color: rgb(172, 198, 160);
+	transition: 0.3s;
+	box-shadow: var(--box-shadow);
+	color: rgb(68, 84, 59);
 }
 .work-text p {
 	font-weight: 700;
 	font-size: 20px;
 }
-.work-diskription img {
+@media (max-width: 768px) {
+	.work-text p {
+		font-size: 16px;
+	}
+}
+
+/* .work-diskription img {
 	width: 100px;
-}
+} */
 .work-diskription {
-	padding: 5px;
-	margin-bottom: 30px;
-	background-color: rgb(193, 251, 168);
+	padding: 15px;
+	margin: 0px auto 30px auto;
+	background-color: rgb(255, 255, 255);
+	border: 1px solid rgb(166, 202, 144);
+	width: 80%;
 }
+.work-diskription p {
+	text-indent: var(--text-indent);
+	font-size: 18px;
+}
+@media (max-width: 768px) {
+	.work-diskription p {	
+		font-size: 14px;
+	}
+	.work-diskription {
+		min-width: 280px;
+	}
+}
+
 .work-diskription-hidden {
 	display: none;
-	
 }
 .work-container {
 	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 25px;
 }
