--- a/style/index.css
+++ b/style/index.css
@@ -1,9 +1,8 @@
-@import 'null.css';
 body {
 	font-family: 'Open Sans', sans-serif;
 }
 
-.index-menu {
+/* .index-menu {
 	position: absolute;
 	right: 5px;
 	top: 5px;
@@ -23,14 +22,13 @@ body {
 	color: rgb(203, 203, 203);
 	text-decoration: underline;
 	transition: 0.5s;
-}
+} */
 
 .wrapper-index {
 	width: 100%;
 	height: 100vh;
 	/* border: 10px solid rgb(37, 4, 4); */
 	display: flex;
-
 	align-items: center;
 	justify-content: center;
 	background: url(/image/kiskelovo/kis-1.JPEG) no-repeat;
@@ -58,7 +56,7 @@ body {
 	text-shadow: 0px 0px 2px black;
 }
 .index-title-title {
-	margin-bottom: 10px;
+	margin-bottom: var(--margin-five);
 	animation-name: index-title-title;
 	animation-duration: 2s;
 	animation-iteration-count: 1;
@@ -100,12 +98,13 @@ body {
 .index-link {
 	margin: 0 auto;
 	text-align: center;
-	padding: 10px;
+	padding: var(--padding-ten);
 	font-size: 40px;
 	animation-name: index-link;
 	animation-duration: 3s;
 	animation-iteration-count: 1;
 	border: 1px solid rgba(169, 169, 169, 0.465);
+	text-decoration: none;
 }
 .index-link:hover {
 	background-color: rgba(206, 245, 203, 0.341);
@@ -116,8 +115,13 @@ body {
 	/* color: #d7d7d7; */
 	color: #5e4040;
 }
+
 .index-link-div:hover {
 	color: #0b9e0b;
+}
+.index-link-div:hover span {
+	text-decoration: underline;
+	color: #f2f2bf;
 }
 
 .index-link span {
