--- a/style/akkordeon.css
+++ b/style/akkordeon.css
@@ -7,8 +7,9 @@
 	margin-bottom: var(margin-ten);
 }
 .work-icon {
-	width: 60px;
-	height: 60px;
+	width: 40px;
+	height: 40px;
+	position: relative;
 	border: 1px solid rgb(198, 197, 197);
 	background-color: rgb(239, 239, 239);
 	margin-right: var(--margin-five);
@@ -17,15 +18,18 @@
 .work-icon:last-child {
 	margin-bottom: 0px;
 }
-.work-icon:hover {
-	background-color: rgb(198, 197, 197);
-	transition: 0.3s;
-	box-shadow: var(--box-shadow);
-}
+
 .work-icon img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	position: absolute;
+}
+.work-icon img:hover {
+	transform: scale(1.3);
+	transition: 0.3s;
+	background-color: rgb(198, 197, 197);
+	box-shadow: var(--box-shadow);
 }
 .work-text {
 	/* display: flex; */
@@ -67,7 +71,7 @@
 	font-size: 18px;
 }
 @media (max-width: 768px) {
-	.work-diskription p {	
+	.work-diskription p {
 		font-size: 14px;
 	}
 	.work-diskription {
