--- a/style/index.css
+++ b/style/index.css
@@ -116,16 +116,18 @@ body {
 	color: #5e4040;
 }
 
+
 .index-link-div:hover {
 	color: #0b9e0b;
 }
 .index-link-div:hover span {
 	text-decoration: underline;
-	color: #f2f2bf;
+	color: #ffffff;
 }
 
 .index-link span {
 	font-size: 30px;
+	font-weight: 200;
 	/* text-decoration: underline; */
 }
 
