--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,10 @@
 /* !все переменные */
 :root {
   --block-background: rgb(213, 246, 199); /* цвет для секций */
-  --header-footer-navbar-popup: #40a826;
+  /* --header-footer-navbar-popup: #40a826; */
+  --header-footer-navbar-popup: #4daa36;
+  
+ 
   --box-shadow: 5px 5px 15px black;
   --color: rgb(34, 11, 11);
   --text-indent: 40px;
@@ -39,65 +42,7 @@ html {
   box-sizing: inherit;
 }
 
-/* body {
-  display: flex;
-  flex-direction: column;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  line-height: 1.2;
-  height: 100%;
-} */
 
-/* .container {
-  width: 100%;
-  max-width: 1000px;
-  margin: 0 auto;
-  height: 100%;
-  padding: 0 15px;
-} */
-
-/* .header {
-  flex: 0 0 auto;
-  background-color: #212429;
-  margin-top: 75px;
-} */
-
-/* .header h1 {
-  text-align: center;
-  color: #fff;
-  font-size: 30px;
-  font-weight: bold;
-} */
-
-/* .main {
- 
-  flex: 1 0 auto;
-  
-} */
-
-/* .content {
-  padding: 50px 0;
-} */
-/* .content__first {
-  margin-top: 75px;
-  height: 100%;
-} */
-
-/* p {
-  margin-top: 40px;
-  margin-bottom: 40px;
-} */
-
-/* .logo img {
-  width: 75px;
-  height: 75px;
-  object-fit: contain;
-} */
-
-/* .footer .content {
-  color: #fff;
-  background: #1e01ff4d;
-} */
 
 .navbar {
   position: fixed;
@@ -146,15 +91,20 @@ html {
   font-weight: 400;
   align-items: center;
   padding: 0 20px;
-  color: rgb(229, 222, 222);
-
-  /* color: rgb(12, 97, 10); */
+  color: rgb(255, 255, 255);  
+  position: relative;
 }
-
+.active {
+  
+}
+.navbar__wrap .menu > li > .active {
+  color: gold;
+}
 
 .navbar__wrap .menu > li > a:hover {
   /* color: rgb(229, 222, 222); */
-  color: rgb(12, 97, 10);
+  color: rgb(210, 208, 208);
+  text-decoration: underline;
   transition: 0.3s;
 }
 
@@ -186,6 +136,7 @@ html {
     width: 100%;
     height: 100%;
     background: var(--header-footer-navbar-popup);
+   
     z-index: 100;
     display: flex;
     transition: 0.3s;
@@ -207,18 +158,20 @@ html {
     width: 100%;
   }
   .popup .menu > li > a {
-    width: 100%;
+    width: 220px;
     display: flex;
     justify-content: center;
     padding: 20px 0;
     font-size: 20px;
     font-weight: bold;
     color: #ffffff;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
+    margin: 0px auto 10px auto;
   }
   .popup .menu > li > a:hover {
-    background-color: rgb(111, 252, 79);
-    transition: 0.3s;
+    background-color: #385730;
+    border: 1px solid white;
+    transition: 1s;
   }
   .hamb__field.active .bar:nth-child(2) {
     opacity: 0;
