переделал страницу ourwork

--- a/style/style.css
+++ b/style/style.css
@@ -9,8 +9,9 @@
 @import 'index.css';
 @import 'portfolio.css';
 @import 'swiper.css';
-@import 'form.css';
+
 @import 'ourWork.css';
+@import 'ourworks.css';
 @import 'contacts.css';
 
 /* !все переменные */
