--- a/style/ourworks.css
+++ b/style/ourworks.css
@@ -1,4 +1,4 @@
-.ourworks {
+/* .ourworks {
 	margin-top: 100px;
 }
 .container {
@@ -34,4 +34,102 @@
 .name {
 	text-align: center;
 	font-size: 20px;
+} */
+
+.ourworks {
+	margin-top: 100px;
+	background-color: var(--block-background);
+	padding: var(--margin-five);
+}
+.container {
+}
+
+.ourworks-list {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+.ourworks-item {
+	/* border: 12px solid red; */
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	/* width: 33.33%; */
+}
+.item-link {
+	/* border: 2px solid rgb(14, 239, 6); */
+	display: flex;
+	/* flex-direction: column; */
+	align-items: center;
+	
+	width: 30%;
+	margin-bottom: var(--margin-ten);
+}
+.item-logo {
+	width: 50px;
+	height: 50px;
+	margin-top: var(--margin-five);
+	margin-bottom: var(--margin-five);
+}
+.item-logo img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+.item-img {
+	width: 90%;
+	height: 90%;
+
+	margin-top: var(--margin-five);
+	margin-bottom: var(--margin-five);
+}
+.item-img img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+.item-name {
+	font-size: 25px;
+	margin-top: var(--margin-five);
+	margin-bottom: var(--margin-five);
+}
+@media (max-width: 768px) {
+	.item-name h2 {
+		font-size: 18px;
+	}
+	.item-logo {
+		width: 40px;
+		height: 40px;
+	}
+}
+@media (max-width: 481px) {
+	.ourworks-list {
+		display: block;
+		width: 80%;
+		
+		margin: 0 auto;
+	}
+	.ourworks-item {
+		margin: 0 auto;
+	}
+	.item-link {
+		width: 90%;
+		display: block;
+		margin: 0 auto;
+		margin-bottom: var(--margin-ten);
+	}
+}
+@media (max-width: 321px) {
+	.ourworks-list {
+		width: 100%;
+	}
+	.item-link {
+		width: 300px;
+		border: 2px solid red;
+	}
+	.ourworks {
+		
+		padding: 0;
+	}
 }
