--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -3,23 +3,25 @@
 	/* border: 2px solid green; */
 }
 .portfolio-title {
-	
 }
 .portfolio-title h2 {
 	font-size: 30px;
 	font-weight: 700;
 	text-align: center;
 }
-.portfolio-text {	
+.portfolio-text {
 	margin-bottom: var(--margin-five);
-	margin-top: var(--margin-five);
+	/* margin-top: var(--margin-five); */
 	margin-right: auto;
 	margin-left: auto;
 	background-color: white;
 	width: 70%;
+	display: flex;
+	align-items: center;
 }
 .portfolio-text p {
 	text-indent: 20px;
+	font-size: 18px;
 }
 
 .porftolio-section {
@@ -39,7 +41,7 @@
 }
 
 .pictures h2 {
-	text-align: center;
+	
 }
 .pictures-wrapper {
 	display: grid;
@@ -51,18 +53,12 @@
 .pictures-title {
 	margin: 5px;
 }
-.pictures-title h2{
-	font-size: 20px;
+.pictures-title h2 {
+	font-size: 25px;
+	font-weight: 700;
+	text-align: center;
 }
 
-@media (max-width: 768px) {
-	.pictures-wrapper {
-		display: block;
-	}
-	.picture-item {
-		margin-bottom: 2px;
-	}
-}
 /* .picture-item {
 	width: 33.33%;
 } */
@@ -76,4 +72,36 @@
 	left: 0; */
 }
 .picture-item {
+}
+@media (max-width: 768px) {
+	.porftolio-section {
+		/* !дисплей флекс */
+		display: block;
+	}
+	.pictures-wrapper {
+		display: block;
+	}
+	.picture-item {
+		margin-bottom: 2px;
+	}
+	.portfolio-title h2 {
+		font-size: 20px;
+		
+	}
+	.pictures-title h2 {
+		font-size: 18px;
+		
+	}
+}
+@media (max-width: 481px) {
+	.portfolio-text p {
+		/* max-width: 320px; */
+		font-size: 12px;
+	}
+	.porftolio-section {
+		
+		padding: 0px;
+		padding-top: var(--padding-five);
+		
+	}
 }
