--- a/style/ourworks.css
+++ b/style/ourworks.css
@@ -49,23 +49,28 @@
 	flex-wrap: wrap;
 	justify-content: space-between;
 }
+.item-link {
+	/* border: 2px solid rgb(14, 239, 6); */
+	display: flex;
+	/* flex-direction: column; */
+	align-items: center;
+	position: relative;
+
+	width: 30%;
+	margin-bottom: var(--margin-ten);
+}
 .ourworks-item {
-	/* border: 12px solid red; */
 	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	/* width: 33.33%; */
 }
-.item-link {
-	/* border: 2px solid rgb(14, 239, 6); */
-	display: flex;
-	/* flex-direction: column; */
-	align-items: center;
-	
-	width: 30%;
-	margin-bottom: var(--margin-ten);
+.ourworks-item:hover {
+	box-shadow: 0px 0px 10px black;
+	transition: 1s;
 }
+
 .item-logo {
 	width: 50px;
 	height: 50px;
@@ -94,6 +99,9 @@
 	margin-top: var(--margin-five);
 	margin-bottom: var(--margin-five);
 }
+.item-name h2 {
+	color: var(--color);
+}
 @media (max-width: 768px) {
 	.item-name h2 {
 		font-size: 18px;
@@ -107,7 +115,7 @@
 	.ourworks-list {
 		display: block;
 		width: 80%;
-		
+
 		margin: 0 auto;
 	}
 	.ourworks-item {
@@ -129,7 +137,6 @@
 		border: 2px solid red;
 	}
 	.ourworks {
-		
 		padding: 0;
 	}
 }
