--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,8 @@
 :root {
   --block-background: rgb(213, 246, 199); /* цвет для секций */
   /* --header-footer-navbar-popup: #40a826; */
-  --header-footer-navbar-popup: #4daa36; 
+  /* --header-footer-navbar-popup: #4daa36;  */
+  --header-footer-navbar-popup: 	#007730; 
   --box-shadow: 5px 5px 15px black;
   --color: rgb(34, 11, 11);
   --text-indent: 40px;
@@ -49,7 +50,7 @@ html {
   left: 0;
   top: 0;
   width: 100%;
-  height: 75px;
+  height: 150px;
   background: var(--header-footer-navbar-popup);
 
   z-index: 10;
@@ -130,7 +131,7 @@ html {
   }
   .popup {
     position: fixed;
-    top: 75px;
+    top: 150px;
     left: -100%;
     width: 100%;
     height: 100%;
