--- a/style/main.css
+++ b/style/main.css
@@ -3,7 +3,7 @@
 }
 
 .boss {
-	background-color: var(--block-background);
+	/* background-color: var(--block-background); */
 	margin-top: 170px;
 	margin-bottom: var(--margin-thirty);
 }
