--- a/style/ourworks.css
+++ b/style/ourworks.css
@@ -37,8 +37,8 @@
 } */
 
 .ourworks {
-	margin-top: 100px;
-	background-color: var(--block-background);
+	margin-top: 170px;
+	/* background-color: var(--block-background); */
 	padding: var(--margin-five);
 }
 .container {
@@ -64,11 +64,11 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	/* width: 33.33%; */
+	/* border: 1px solid black; */
 }
 .ourworks-item:hover {
 	box-shadow: 0px 0px 10px black;
-	transition: 1s;
+	transition: 0.3s;
 }
 
 .item-logo {
