--- a/style/index.css
+++ b/style/index.css
@@ -92,9 +92,10 @@ body {
 	margin-bottom: 20px;
 	position: relative;
 	animation-name: index-link-top;
-	animation-duration: 4s;
+	animation-duration: 2s;
 }
-.index-link-top,.index-link-down {
+.index-link-top,
+.index-link-down {
 	background-color: rgba(255, 255, 255, 0.397);
 }
 @keyframes index-link-top {
