--- a/style/ourworks.css
+++ b/style/ourworks.css
@@ -37,7 +37,7 @@
 } */
 
 .ourworks {
-	margin-top: 170px;
+	/* margin-top: 170px; */
 	/* background-color: var(--block-background); */
 	padding: var(--margin-five);
 }
@@ -50,9 +50,9 @@
 	justify-content: space-between;
 }
 .item-link {
-	/* border: 2px solid rgb(14, 239, 6); */
+
 	display: flex;
-	/* flex-direction: column; */
+
 	align-items: center;
 	position: relative;
 
@@ -64,7 +64,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	/* border: 1px solid black; */
+	
 }
 .ourworks-item:hover {
 	box-shadow: 0px 0px 10px black;
