--- a/style/swiper.css
+++ b/style/swiper.css
@@ -1,6 +1,6 @@
 .swiper {
 	width: 600px;
-	border: 1px solid red;
+	/* border: 1px solid red; */
 	/* height: 300px; */
 	cursor: grab;
 	margin-bottom: var(--margin-five);
