--- a/style/footer.css
+++ b/style/footer.css
@@ -1,5 +1,6 @@
 .footer {
-	background: var(--header-footer-navbar-popup);
+	background: url(/image/green-grass-1.jpg) ;
+	background-position:bottom;
 	flex: 0 0 auto;
 	height: 200px;
 }
