--- a/style/logo.css
+++ b/style/logo.css
@@ -2,7 +2,8 @@
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	box-shadow: 0px 0px 4px #63db93;
+	/* box-shadow: 0px 0px 4px #63db93; */
+	box-shadow: 0px 0px 10px #fce702;
 }
 
 .logo {
