--- a/style/style.css
+++ b/style/style.css
@@ -15,10 +15,7 @@
 
 /* !все переменные */
 :root {
-  --block-background: rgb(213, 246, 199); /* цвет для секций */
-  /* --header-footer-navbar-popup: #40a826; */
-  /* --header-footer-navbar-popup: #4daa36;  */
-  --header-footer-navbar-popup: 	#007730; 
+  --header-footer-navbar-popup: #007730;
   --box-shadow: 5px 5px 15px black;
   --color: rgb(34, 11, 11);
   --text-indent: 40px;
@@ -41,8 +38,6 @@ html {
   box-sizing: inherit;
 }
 
-
-
 .navbar {
   position: fixed;
   font-weight: 900;
@@ -51,7 +46,9 @@ html {
   width: 100%;
   height: 150px;
   background: var(--header-footer-navbar-popup);
-
+  background:url(/image/top-1.jpg);
+  background:url(/image/green-grass-1.jpg);
+  background-position: bottom;
   z-index: 10;
 }
 
@@ -71,7 +68,6 @@ html {
 
 .menu > li > a {
   text-decoration: none;
-  
 }
 
 .navbar__wrap .menu {
@@ -81,7 +77,6 @@ html {
 .navbar__wrap .menu > li {
   display: flex;
   align-items: stretch;
- 
 }
 
 .navbar__wrap .menu > li > a {
@@ -90,11 +85,10 @@ html {
   font-weight: 400;
   align-items: center;
   padding: 0 20px;
-  color: rgb(255, 255, 255);  
+  color: rgb(255, 255, 255);
   position: relative;
 }
 .active {
-  
 }
 .navbar__wrap .menu > li > .active {
   color: gold;
@@ -133,13 +127,15 @@ html {
     width: 100%;
     height: 100%;
     background: var(--header-footer-navbar-popup);
-   
+    background: #007730d7;
+    
+
     z-index: 100;
     display: flex;
     transition: 0.3s;
   }
   .popup.open {
-    left: 0;
+    left: 0px;
   }
   .popup .menu {
     width: 100%;
