--- a/style/style.css
+++ b/style/style.css
@@ -15,7 +15,7 @@
 
 /* !все переменные */
 :root {
-  --header-footer-navbar-popup: #007730;
+  --header-footer-navbar-popup: rgb(70, 177, 56);
   --box-shadow: 5px 5px 15px black;
   --color: rgb(34, 11, 11);
   --text-indent: 40px;
@@ -46,7 +46,7 @@ html {
   width: 100%;
   height: 150px;
   /* background:url(/image/tree-2.jpg); */
-  background-color: rgb(52, 24, 24);
+  background-color: var(--header-footer-navbar-popup);
   
   
   z-index: 10;
@@ -127,7 +127,7 @@ html {
     width: 100%;
     height: 100%;
     background: var(--header-footer-navbar-popup);
-    background: #007730d7;
+    background: rgba(70, 177, 56, 0.781);
     
 
     z-index: 100;
