--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -21,9 +21,20 @@
 	color: var(--color);
 }
 .portfolio-text p {
-	text-indent: 20px;
+	/* text-indent: 20px; */
 	font-size: 18px;
 }
+.workname-list li{
+	background: url(/image/pngegg.png) no-repeat;
+	background-position: left -2px;
+	background-size: 20px;
+	line-height: 30px;
+}
+.workname-item {
+	margin-left: 30px;
+	
+}
+
 
 .porftolio-section {
 	display: flex;
