--- a/style/style.css
+++ b/style/style.css
@@ -44,10 +44,8 @@ html {
   left: 0;
   top: 0;
   width: 100%;
-  height: 150px;
+  max-height: 150px;
   background-color: var(--header-footer-navbar-popup);
-  
-  
   z-index: 10;
 }
 
@@ -90,7 +88,6 @@ html {
 
 .navbar__wrap .menu > li > .active {
   color: rgb(186, 229, 177);
-  
 }
 
 .navbar__wrap .menu > li > a:hover {
@@ -127,8 +124,6 @@ html {
     height: 100%;
     background: var(--header-footer-navbar-popup);
     background: rgba(70, 177, 56, 0.781);
-    
-
     z-index: 100;
     display: flex;
     transition: 0.3s;
@@ -175,5 +170,18 @@ html {
   }
   body.noscroll {
     overflow: hidden;
+  }
+}
+@media (max-width: 670px) {
+  .navbar {
+    max-height: 100px;
+  }
+  .logo {
+    display: none;
+  }
+  .popup {
+    
+    top: 50px;
+   
   }
 }
