--- a/style/main.css
+++ b/style/main.css
@@ -1,11 +1,13 @@
 .main {
 	flex: 1 0 auto;
-	margin-top: 170px;
+	margin-top: 150px;
+	
+	
 }
-@media (max-width: 670px) {
+@media (max-width: 1001px) {
 	.main {
-		
 		margin-top: 70px;
+		
 	}
  }
 
@@ -23,7 +25,7 @@
 
 }
 .boss-img {
-	margin-bottom: var(--margin-ten);
+	margin-bottom: var(--margin-thirty);
 	height: 300px;
 }
 .boss-img img {
@@ -34,7 +36,8 @@
 .boss-img p {
 	text-align: center;
 	font-weight: 700;
-	
+	margin-bottom: 100px;
+	margin-top: var(--margin-ten);
 }
 p span {
 	font-style: italic;
@@ -76,7 +79,7 @@ p span span {
 .boss-text p:last-child {
 	margin-bottom: 0px;
 }
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
 	.boss-container {
 		flex-direction: column;
 		align-items: center;
