--- a/style/ourworks.css
+++ b/style/ourworks.css
@@ -1,40 +1,20 @@
-/* .ourworks {
-	margin-top: 100px;
-}
-.container {
-}
-.ourworks-list {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	padding: var(--padding-ten);
-	background-color: var( --block-background);
-}
-.ourworks-item {
-	width: 200px;
-	height: 200px;
-	border: 1px solid black;
-	margin-bottom: 35px;
-	margin-right: var(--margin-five)
-}
-.ourworks-item:hover {
-	color: red;
-	cursor: pointer;
-}
-.img {
-	width: 100%;
-	height: 100%;
-	
-}
-.img img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-}
-.name {
+.back {
+	width: 100px;
+	font-size: 25px;
+	/* border: 2px solid black; */
+	position: fixed;
+	z-index: 99;
 	text-align: center;
-	font-size: 20px;
-} */
+	opacity: 0.3;
+	padding: var(--padding-five);
+}
+.back p {
+}
+.back:hover {
+	opacity: 1;
+	background-color: var(--header-footer-navbar-popup);
+	color: white;
+}
 
 .ourworks {
 	/* margin-top: 170px; */
@@ -50,7 +30,6 @@
 	justify-content: space-between;
 }
 .item-link {
-
 	display: flex;
 
 	align-items: center;
@@ -64,13 +43,10 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	
 }
 .ourworks-item:hover {
 	box-shadow: 0px 0px 10px black;
 	transition: 0.3s;
-	
-	
 }
 
 .item-logo {
@@ -87,7 +63,6 @@
 .item-img {
 	width: 90%;
 	height: 90%;
-
 	margin-top: var(--margin-five);
 	margin-bottom: var(--margin-five);
 }
@@ -109,8 +84,8 @@
 		font-size: 18px;
 	}
 	.item-logo {
-		width: 40px;
-		height: 40px;
+		width: 30px;
+		height: 30px;
 	}
 }
 @media (max-width: 481px) {
@@ -136,7 +111,6 @@
 	}
 	.item-link {
 		width: 300px;
-		
 	}
 	.ourworks {
 		padding: 0;
