--- a/style/main.css
+++ b/style/main.css
@@ -103,11 +103,11 @@ p span span {
 	margin-bottom: 5px;
 }
 
-.additional {
+/* .additional {
 	display: flex;
 	border: 2px solid black;
 }
 .additional-article {
 	width: 50%;
 	min-height: 50vh;
-}
+} */
