--- a/css/main.css
+++ b/css/main.css
@@ -91,12 +91,14 @@ p {
 .contact-form {
 	margin: 5px;
 	padding: 5px;
-	background-color: rgb(182, 245, 174);
+	margin-bottom: 50px;
+	/* background-color: rgb(182, 245, 174); */
 }
 .form-field {
 	width: 70%;
 	font-size: 15px;
 	padding: 2px;
+	border: 1px solid rgb(182, 245, 174);;
 }
 .form-field-up {
 	margin-bottom: 20px;
@@ -106,20 +108,24 @@ p {
 	padding: 5px;
 	background-color: rgb(91, 204, 71);
 	color: rgb(40, 39, 39);
-	width: 70%;
+	width: 60%;
+	position: fixed;
 }
 .form-button:hover {
-	background-color: rgb(73, 146, 60);
+	background-color: rgb(54, 107, 45);
 	transition: 0.3s;
 	color: white;
+	
+	
 }
+
 
 @media (max-width: 768px) {
 	.form-field {
 		width: 100%;
 	}
 	.form-button {
-		width: 100%;
+		width: 60%;
 	}
 }
 @media (max-width: 481px) {
